k8s/api-server.yaml
# Server Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: apiserver

    template:
        metadata:
            labels:
                component: apiserver
        spec:
            containers:
                - name: apiserver
                  image: emililnicki/gitfit:server
                  imagePullPolicy: Always
                  ports:
                    - name: port4000   
                      containerPort: 4000
---
# Server Cluster Ip Service
apiVersion: v1
kind: Service
metadata:
    name: api-server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: apiserver
    ports:
       - name: port4000
         port: 4000
         targetPort: 4000
