k8s/client.yaml
# Client Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: web
        
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                -   name: client
                    image: emililnicki/gitfit:client
                    imagePullPolicy: Always
                    ports:
                        - containerPort: 3000
---
# Client Cluster Ip Service 
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP 
    selector:
        component: web
    ports:
        - 
            port: 3000
            targetPort: 3000
